<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <include layout="@layout/activity_hometoolbar" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:orientation="vertical">

        <com.vedas.weightloss.FONTS.TextViewFontStyle
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/text1"
            android:textColor="#7c7b7b"
            android:textSize="16sp" />

        <com.vedas.weightloss.FONTS.TextViewFontStyle
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/text2"
            android:textColor="#7c7b7b"
            android:textSize="16sp" />

        <com.vedas.weightloss.FONTS.TextViewFontStyle
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/text3"
            android:textColor="#7c7b7b"
            android:textSize="16sp" />

        <com.vedas.weightloss.FONTS.TextViewFontStyle
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:text="Delete Account"
            android:textColor="#000000"
            android:textSize="17sp" />

        <com.vedas.weightloss.FONTS.TextViewFontStyle
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="Enter your password to delet your account"
            android:textColor="#7c7b7b" />


        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardView"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:elevation="3dp"
            app:cardElevation="2dp"
            app:cardMaxElevation="1dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#FFFFFF">

                <com.vedas.weightloss.FONTS.EditTextFontStyle
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:hint="password"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:textColor="#000000"
                    android:textColorHint="#7c7b7b"
                    android:textSize="16sp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <com.vedas.weightloss.FONTS.ButtonFontStyle
            android:id="@+id/deleteaccount"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_border"
            android:text="Delete Account"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <com.vedas.weightloss.FONTS.TextViewFontStyle
            android:layout_width="match_parent"
            android:layout_height="30dp" />


    </LinearLayout>

</RelativeLayout>